Fix for h-screen on mobile

--- a/client/main.css
+++ b/client/main.css
@@ -32,3 +32,9 @@ body {
   color: transparent;
 }
 
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
+
